an image in the README.md file
