# llm-model-generator/app/alembic/versions/11177aea917a_changes_on_the_appmodel_knowledge_graph_.py
@@ -1,0 +1,34 @@
+"""changes on the AppModel knowledge_graph field
+
+Revision ID: 11177aea917a
+Revises: f16b12e4dcf3
+Create Date: 2026-03-17 14:07:34.742605
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+from sqlalchemy.dialects import postgresql
+
+# revision identifiers, used by Alembic.
+revision: str = '11177aea917a'
+down_revision: Union[str, Sequence[str], None] = 'f16b12e4dcf3'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('appmodel', sa.Column('knowledge_graph', postgresql.JSONB(astext_type=sa.Text()), nullable=True))
+    op.drop_column('appmodel', 'definition')
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('appmodel', sa.Column('definition', postgresql.JSONB(astext_type=sa.Text()), autoincrement=False, nullable=True))
+    op.drop_column('appmodel', 'knowledge_graph')
+    # ### end Alembic commands ###
